--- a/styles/app.css
+++ b/styles/app.css
@@ -3,7 +3,7 @@
   margin: 0;
   list-style: none;
   outline: none;
-  font-family: "Proxima Nova", Roboto, system-ui, Tahoma, sans-serif;
+  font-family: 'Proxima Nova', Roboto, system-ui, Tahoma, sans-serif;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -79,8 +79,7 @@ a {
   min-width: 100px;
   text-align: center;
   cursor: pointer;
-  -webkit-transition: background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out;
+  -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   border: 1px solid transparent;
   -webkit-touch-callout: none;
