--- a/common/scss/app.scss
+++ b/common/scss/app.scss
@@ -574,3 +574,50 @@ body {
     filter: brightness(100%);
   }
 }
+.footerContainer {
+  width: 100%;
+  height: 190px;
+  background-color: #f3f3f3;
+  border-radius: 0 0 10px 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  .footer {
+    height: 100%;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 18px 0;
+
+    .title {
+      color: #000000;
+      font-size: 20px;
+      font-weight: 800;
+      margin-bottom: 15px;
+    }
+
+    span {
+      color: #7b7b7b;
+      font-size: 16px;
+    }
+  }
+
+  .logo {
+    gap: 60px;
+  }
+
+  .contacts {
+    align-items: flex-start;
+  }
+
+  .payments {
+    height: min-content;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 10px;
+  }
+}
