--- a/common/scss/app.scss
+++ b/common/scss/app.scss
@@ -621,3 +621,39 @@ body {
     grid-gap: 10px;
   }
 }
+
+.privacyAndPolicy {
+  padding: 18px;
+  margin-bottom: 50px;
+
+  .container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .title {
+      font-weight: 700;
+      margin: 30px 0 50px 0;
+    }
+
+    .subtitle {
+      align-self: flex-start;
+      font-weight: 700;
+      margin: 50px 0 0px 0;
+    }
+
+    p {
+      margin: 20px 0;
+      line-height: 26px;
+    }
+
+    ul {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      list-style-type: disc;
+    }
+  }
+}
